refactor: modernize Java stream operations in tests