@@ -28,7 +28,6 @@ import org.springframework.test.web.servlet.MvcResult;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.hasSize;
@@ -145,12 +144,12 @@ class TaskControllerTest {
         List<String> controllerTitles = tasksFromController.stream()
                 .map(TaskDTO::getTitle)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> dbTitles = tasksFromDB.stream()
                 .map(Task::getTitle)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(controllerTitles).containsExactlyElementsOf(dbTitles);
     }
